--- a/style.css
+++ b/style.css
@@ -78,6 +78,27 @@ main {
   gap: 25px;
   text-align: center;
 }
+@media (max-width: 1200px) {
+  .container {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media (max-width: 1024px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 480px) {
+  .container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
 .product-card a {
   text-decoration: none;
   color: black;
@@ -448,5 +469,4 @@ footer.footer {
   border-radius: 25px;
   display: inline-block; /* To allow padding and margin to work correctly */
   text-decoration: none; /* Remove underline from link */
-}
 }
