--- a/style.css
+++ b/style.css
@@ -72,18 +72,27 @@ main {
 
 .container {
   display: grid;
-  width: 90%;
+  width: 100%;
   margin: auto;
   grid-template-columns: repeat(4, 1fr);
   gap: 25px;
   text-align: center;
 }
-@media (min-width: 1200px) {
+@media (min-width: 1800px) {
   .container {
     grid-template-columns: repeat(4, 1fr);
   }
   .product-card {
     width: 100%;
+  }
+  .product-card img {
+    max-width: full;
+    height: auto;
+  }
+}
+@media (max-width: 1500px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 @media (max-width: 1024px) {
@@ -92,6 +101,10 @@ main {
   }
   .product-card {
     width: 100%;
+  }
+  .product-card img {
+    max-width: full;
+    height: auto;
   }
 }
 @media (max-width: 768px) {
