--- a/style.css
+++ b/style.css
@@ -391,6 +391,8 @@ footer.footer {
   margin: 15px 0;
   color: #555;
   line-height: 1.5;
+  width: auto;
+  text-align: justify;
 }
 
 .product-quantity {
@@ -398,6 +400,7 @@ footer.footer {
   align-items: center;
   gap: 10px;
   margin-top: 20px;
+  width: 100%;
 }
 
 .product-quantity label {
@@ -423,6 +426,7 @@ footer.footer {
   display: flex;
   gap: 15px;
   margin-top: 25px;
+  justify-content: center;
 }
 
 .product-button button {
